# viewmask

./: .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test-docker.yml  test-python.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
tests/: test_viewmask.py
viewmask/: __init__.py  cli.py  utils.py
viewmask/collaborate/: .gitignore  asgi.py  settings.py  urls.py  uwsgi.ini  wsgi.py
viewmask/collaborate/collaborate/: apps.py  models.py  views.py
viewmask/collaborate/templates/: annotate.html  base.html  form_view.html  home.html
viewmask/collaborate/templates/registration/: login.html
viewmask/collaborate/theme/static_src/: .gitignore  .pnp.js  package.json  postcss.config.js  purgecss  tailwind.config.js
viewmask/collaborate/theme/static_src/.yarn/: build-state.yml
viewmask/collaborate/viewmask_collaborate/: apps.py  views.py
viewmask/viewmask-collaborate/: asgi.py  urls.py
viewmask/viewmask-collaborate/collaborate/: models.py
viewmask/viewmask-collaborate/templates/: form_view.html
viewmask/viewmask-collaborate/templates/registration/: login.html
viewmask/viewmask-collaborate/theme/static_src/: purgecss
