[tool.poetry]
name = "viewmask"
version = "0.2.4"
description = "A Python package and CLI to view XML annotations and NumPy masks."
license = "MIT"
authors = ["sumanthratna <sumanthratna@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/sumanthratna/viewmask"
documentation = "https://viewmask.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
click = "^7.1.2"
numpy = "^1.18.4"
opencv-python-headless = "^4.2.0"
openslide-python = "^1.1.1"
dask-image = "^0.4.0"
scikit-image = "^0.18.1"
Pillow = "^8.0.0"
napari = {version = "^0.4.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
sphinx = "^3.2.1"
sphinx-click = "^2.3.2"

[tool.poetry.scripts]
viewmask = "viewmask.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
